unpackaged/main/default/objects/WebserviceTelematicsData__c/WebserviceTelematicsData__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Webservices données telematics sur Google Cloud Platform</description>
    <label>WebserviceTelematicsData</label>
</CustomObject>