unpackaged/main/default/objects/WebserviceTelematicsData__c/fields/Authorization__c.field-meta.xml
<CustomField>
    <fullName>Authorization__c</fullName>
    <label>Authorization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>