unpackaged/main/default/objects/WebserviceTelematicsData__c/fields/Environnement__c.field-meta.xml
<CustomField>
    <fullName>Environnement__c</fullName>
    <label>Environnement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>