unpackaged/main/default/objects/WebserviceTelematicsData__c/fields/Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Sandbox__c</fullName>
    <label>Sandbox</label>
    <length>30</length>
    <type>Text</type>
</CustomField>